fix elements overflowing from the form

--- a/restaurant app/profile/profile.css
+++ b/restaurant app/profile/profile.css
@@ -70,7 +70,7 @@ body {
 }
 
 #mainContainer {
-  min-width: 20vh;
+  min-width: 250px;
   background-color: whitesmoke;
   max-width: 30vw;
   height: auto;
